--- a/src/Aggregator/app.config.json
+++ b/src/Aggregator/app.config.json
@@ -1,6 +1,10 @@
 ﻿{
   "email": {
     "server": "imap.gmail.com",
-    "port": 993
+    "port": 993,
+    "pollingFrequencyInMins": 1 
+  },
+  "git": {
+    "repository": "git@github.com:mcai4gl2/wiki.git"
   } 
 }
